# TPD-Pete

./: .flake8  .gitignore  README.md  REAMDE.md  pyproject.toml  setup.py
.github/workflows/: linter.yml  snyk.yml
tpd_pete/: __init__.py  __main__.py  actionmanager.py  actions.py  ihook.py  pete.py  validator.py
tpd_pete/actions/: configure.py  create_project.py  deployment.py  deploymentaction.py  iaction.py  localoverride.py
tpd_pete/actions/deployment/: amplifydeployment.py  cloudformationdeployment.py  hookdeployment.py  ideploymentaction.py  zappadeployment.py
tpd_pete/tools/: awscli.py  boto.py  configuration.py  template.py
