[tool.poetry]
name = "tpd-pete"
version = "0.1.0"
description = "TPD Pete is a AWS Deployment Tool for AWS Cloudformation"
authors = ["Martijn Wiekens <info@martijnwiekens.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
pyinquirer = "^1.0.3"
halo = "^0.0.29"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
