[tool.poetry]
name = "pete"
version = "0.1.0"
description = ""
authors = ["Martijn Wiekens <info@martijnwiekens.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
awscli = "1.18.31"
pyinquirer = "1.0.3"
halo = "0.0.29"
termcolor = "1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
