[tool.poetry]
name = "pete"
version = "0.4.0"
description = ""
authors = ["Martijn Wiekens <info@martijnwiekens.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
pyinquirer = "1.0.3"
halo = "0.0.29"
termcolor = "1.1.0"
cfn_flip = "^1.2.2"
boto3 = "^1.16.22"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
